--- a/content/pages/index.mdx
+++ b/content/pages/index.mdx
@@ -3,6 +3,199 @@ title: Home
 excerpt: This is your home page.
 ---
 
-<Block src="hero" bg="muted" />
+<Block py="12|16|24" src="hero-full-width-image"
+    heading="Your New Marketing Coach"
+    lead="Get more clients, book more appointments, increase sales. I will work with you to plan, build, educate, and grow your vision, through your  website and sales funnel."
+    img="BB-hero-meg"
+    learn="#learnMore"
+    buttonprimary="/get-started"
+    />
 
-<Block src="cards" />
+<Section id="learnMore" pt="48">
+  <Container>
+    <Grid col="1|2" gap="8|12|16" alignItems="center">
+      <Flexbox
+        flexDirection="column"
+        alignItems="flex-start"
+        textAlign="left"
+      >
+        <H3 mb="0" fontSize="md" fontWeight="normal" lineHeigh="tight" color="primary" letterSpacing="1.5px">WORK TOGETHER</H3>
+        <H2 id="getStarted" m="0" fontWeight="extrabold" lineHeight="tight">
+          Grow Your Business
+        </H2>
+        <P fontSize="lg|lg" mt="2">
+          Work together one on one, to update your website, automate your messaging, connect all of your marketing and start getting things done.</P>
+        <P fontSize="lg|lg" mt="1">
+          Let's get started.
+        </P>
+      </Flexbox>
+            <Image
+        src="christina-wocintechchat-com-LQ1t-8Ms5PY-unsplash.jpg"
+        colStart="null|2"
+        w="full"
+        rounded="lg"
+        overflow="hidden"
+      />
+    </Grid>
+  </Container>
+</Section>
+<Section pb="" {...props}>
+    <Container>
+      <Grid col="1|2|3" mt="8|10|12" p="0" gap="4|6|8">
+        <Block src="feature"
+          icon="thumbs-up"
+          heading="Coaching"
+          description="Partnering with you in a thought-provoking and creative process that inspires you to maximize your personal and professional potential."
+        />
+        <Block src="feature"
+          icon="message-square"
+          heading="Consulting"
+          description="Assisting you in developing the correct systems and processes to strengthen your brand and deliver consistent results."
+        />
+        <Block src="feature"
+          icon="monitor"
+          heading="Education"
+          description="Learn how to create a marketing plan, understand what goes into each aspect, and how they affect your business."
+        />
+      </Grid>
+      <H3 mt="24" mb="0" fontSize="3xl">Expand Your Reach</H3>
+      <Hr pb="0" mb="0" mt="2" borderTopWidth="7px" borderColor="primary" />
+       <Grid col="1|2|3" mt="4" gap="4">
+         <Div>
+          <P mb="0" fontSize="lg" textAlign="left">Website Audits</P>
+         </Div>
+         <Div>
+          <P mb="0" fontSize="lg" textAlign="left">Email Marketing</P>
+         </Div>
+         <Div>
+          <P mb="0" fontSize="lg" textAlign="left">Message Automation</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Analytics</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Landing Pages</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Pay Per Click Ads</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Social Media Campaigns</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Customer Connections</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Web Accessibility</P>
+         </Div>
+       </Grid>
+    </Container>
+</Section>
+<Section pt="48">
+  <Container>
+    <Grid col="1|2" gap="8|12|16" alignItems="center">
+      <Flexbox
+        flexDirection="column"
+        alignItems="flex-start"
+        textAlign="left"
+      >
+        <H3 mb="0" fontSize="md" fontWeight="normal" lineHeigh="tight" color="primary" letterSpacing="1.5px">TRACK YOUR PROGRESS</H3>
+        <H2 m="0" fontWeight="extrabold" lineHeight="tight">
+          Streamline Your Success
+        </H2>
+        <P fontSize="lg|lg" mt="2">
+          Together we create a personalized daskboard with your entire marketing plan layed out at your finger tips, accessible anytime, anywhere.
+        </P>
+      </Flexbox>
+      <Image
+        src="home-featured-screenshot.png"
+        colStart="null|2"
+        w="full"
+        rounded="lg"
+        overflow="hidden"
+      />
+    </Grid>
+  </Container>
+</Section>
+<Section pb="0" {...props}>
+    <Container>
+      <Grid col="1|2|3" mt="8|10|12" p="0" gap="4|6|8">
+        <Block src="feature"
+          p="0"
+          icon="users"
+          heading="Sessions"
+          description="All sessions are recorded so you can refer back to our coaching conversations whenever needed."
+        />
+        <Block src="feature"
+          p="0"
+          icon="file-text"
+          heading="Meeting Notes"
+          description="Meeting notes, as well as systems and plans are all tracked in a easy to use app."
+        />
+        <Block src="feature"
+          p="0"
+          icon="heart"
+          heading="Ownership"
+          description="Build a stronger business and take ownership of your systems and processes while stepping into your personal greatness."
+        />
+      </Grid>
+       <H3 mt="24" mb="0" fontSize="3xl">1-on-1 Support</H3>
+       <Hr pb="0" mb="0" mt="2" borderTopWidth="7px" borderColor="primary" />
+       <Grid col="1|2|3" mt="4" gap="4">
+         <Div>
+          <P mb="0" fontSize="lg" textAlign="left">Monthly Check-in</P>
+         </Div>
+         <Div>
+          <P mb="0" fontSize="lg" textAlign="left">Easy Access App</P>
+         </Div>
+         <Div>
+          <P mb="0" fontSize="lg" textAlign="left">At Your Own Pace</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Track Progress</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Recorded Sessions</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Expert Advice</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Unlimited Email Support</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Accountability</P>
+         </Div>
+         <Div>
+            <P mb="0" fontSize="lg" textAlign="left">Build Confidence</P>
+         </Div>
+       </Grid>
+  </Container>
+  </Section>
+  <Section pt="48">
+  <Container>
+    <Grid col="1|2" gap="8|12|16" alignItems="center">
+      <Flexbox
+        flexDirection="column"
+        alignItems="flex-start"
+        textAlign="left"
+      >
+        <H3 mb="0" fontSize="md" fontWeight="normal" lineHeigh="tight" color="primary">MEET YOUR COACH</H3>
+        <H2 m="0" fontWeight="extrabold" lineHeight="tight">
+          Building Simplified Solutions
+        </H2>
+        <P fontSize="lg|lg" mt="2">
+          Imagine what could be possible if you spent more time focusing on your clients and less time worrying about marketing.
+        </P>
+      </Flexbox>
+       <Image
+        src="bb-feature.png"
+        colStart="null|2"
+        w="full"
+        rounded="lg"
+        overflow="hidden"
+      />
+    </Grid>
+  </Container>
+</Section>
+<Block src="pricing" />
