--- a/content/blocks/footer.mdx
+++ b/content/blocks/footer.mdx
@@ -1,5 +1,54 @@
-<Footer py="6">
-  <Container mt="20" textAlign="center">
-    <Block src="copyright" />
-  </Container>
-</Footer>
+import { useSiteMetadata } from "@reflexjs/gatsby-theme-core"
+import ScreenReaderText from "./screenreadertext"
+
+export const Footer = () => {
+    const { title } = useSiteMetadata()
+        return (
+        <Section bg="muted" py={[8, 10, 12]}>
+             <Container>
+                <Flexbox
+                  flexDirection={["column", "row"]}
+                  alignItems={["flex-start", "center"]}
+                  justifyContent="space-between"
+                 >
+                     <Div maxW="300px">
+                       <H4 m="0">Want to talk Marketing?</H4>
+                        <P fontSize="md">
+                         I am all ears 👂
+                        </P>
+                                <A href="mailto:bobby@bobbybrooksatx.com" fontSize="md" color="text" lineHeight="none">
+                                <Icon name="mail" color="primary" size="5" mr="2" />
+                                Bobby@bobbybrooksatx.com
+                                </A>
+                            </Div>
+                            <NavMenu
+                                name="header"
+                                dropdown={false}
+                                my="6|0"
+                                gap="4|10|18"
+                            />
+                            </Flexbox>
+                            <Flexbox
+                            borderTopWidth={1}
+                            justifyContent="space-between"
+                            pt={[4, 5, 6]}
+                            mt={[4, 5, 6]}
+                            >
+                            <P fontSize="sm" my="0">
+                                © {new Date().getFullYear()} {title}
+                            </P>
+                            <Grid col="2" gap="4" mt={[4, 0]}>
+                                <A href="https://twitter.com/bobbybrooksatx" color="text">
+                                <Icon name="twitter" size={5} />
+                                <ScreenReaderText text="Bobby on Twitter" />
+                                </A>
+                                <A href="https://instagram.com/bobbybrooksatx" color="text">
+                                <Icon name="instagram" size={5} />
+                                <ScreenReaderText text="Bobby on Instagram" />
+                                </A>
+                            </Grid>
+                            </Flexbox>
+                        </Container>
+                    </Section>
+                )
+    }
