google analytics via tag manager - fuck mix panel

--- a/content/pages/index.mdx
+++ b/content/pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Home
-excerpt: This is your home page.
+excerpt: Bobby Brooks is a tech savy marketer who can help you ramp up your systems and grow your business.
 ---
 
 <Block py="12|16|24" src="hero-full-width-image"
