formatting on res page

--- a/content/pages/resume.mdx
+++ b/content/pages/resume.mdx
@@ -10,7 +10,7 @@ excerpt: This is ny resume, please review and share.
 }}>Bobby Brooks</H1>
 <P my="2" style={{
     textAlign: `center`,
-}}>Austin, TX 78732 • <Block src="contentLink" href="tel:+15125508688" text="(512) 550-8688" /> • <Block src="contentLink" href="mailto:brooksrob@me.com" text="Email" /> • <Block src="contentLink" text="LinkedIn" href="https://linkedin.com" /></P>
+}}>Austin, TX 78732 • <Block src="contentLink" href="tel:+15125508688" text="(512) 550-8688" /> • <Block src="contentLink" href="mailto:brooksrob@me.com" text="Email" /> • <Block src="contentLink" text="LinkedIn" href="https://linkedin.com/in/bbatx" /></P>
 <Hr border="2" color="primary"/>
 <H2 my="2" style={{
     marginBottom: `10px`,
@@ -58,8 +58,8 @@ _Key Achievements:_
 - Achieved 227% ROI and reduced $120K yearly in vendor costs by restructuring corporate website strategy.
 - Accelerated subscribers base at a faster rate by changing calls to action to improve robust content strategy.
 
-Knowbility.org, Austin, TX <Br />
-__Sr. Accessibility Strategist & Chief Technology Officer__, 2015 to 2018
+<Block src="contentLink" text="Knowbility Inc." href="https://knowbility.org" />, Austin, TX <Br />
+<Strong>Sr. Accessibility Strategist & Chief Technology Officer</Strong>, 2015 to 2018
 
 Boosted revenue by 20% through designing a new consulting product and accessibility strategy whilst partnering with companies to provide accessibility qualify assurance for new development projects. Mitigated risk of law suits by thoroughly auditing ADA liability / accessibility compliance issues for over 20 products, developing course of action, and providing training to resolve issue in real time. Secured profitable business proposals by developing a framework for improved technical project estimation and effective resource planning. Maintained strategic capabilities of company by converting core product or accessibility audits into a more consistent process to generate economies of repetition, reduce errors, and eliminate contractors’ dependability. Enabled key stakeholders to make strategic and tactical-level decisions by establishing ad-hoc framework for standardized analysis and transparent reporting.
 
@@ -71,8 +71,8 @@ _Key Projects:_
 - __Pearson Corporation-Standardized Test__: Audit included Windows 10: MS Edge, Firefox, and Chrome with NVDA and Jaws, as well as MacOS: Safari & VoiceOver. Delivered user experience findings from both sighted and non-sighted users in a consolidated report covering operating systems, browsers, and applicable screen reader.
 - Other projects included ACT Corporation-Online Application Form, Tarrant County Community College District, and Whole Foods.
 
-BAE Systems (TS Clearance), Austin, TX<Br />
-__Senior Contract Administrator__, 2008 to 2012
+<Block src="contentLink" text="BAE Systems (TS Clearance)" href="https://baesystems.com" />, Austin, TX<Br />
+<Strong>Senior Contract Administrator</Strong>, 2008 to 2012
 
 Led efforts around overseeing multiple $100M+ contracts for software development and engineering services. Fostered and maintained profitable business relationships with key clients through effective communication and value addition, resulting in gaining stronger negotiating position and improving profit margins across business unit.
 
@@ -93,7 +93,8 @@ Additional experience as <Strong>Sr. Contract Representative</Strong>, <Strong>C
 
 Web Development: ReactJS, GatsbyJS, HTML, PHP, CSS, JavaScript, WP Engine, Yoast, Rank Math, WordPress, BigCommerce, Shopify, WCAG 2.0/2.1, Section 508, Peoplesoft, MRP, MS Office Suite (Excel, Word, Outlook, and PowerPoint), Google Docs, Hosting/DNS/SSL, Gutenberg, Photoshop, SEM Rush, Google Analytics, Page Builders
 
-## Education
+<H2 mb="0">Education</H2>
+<Hr border="2" color="primary" />
 
 __Bachelor of Science in Finance__, San Diego State University, San Diego, CA
 
