--- a/content/pages/resume.mdx
+++ b/content/pages/resume.mdx
@@ -45,10 +45,16 @@ Vision-driven professional, adept at managing marketing assets and campaigns to 
     </Div>
 </Grid>
 
-## Professional experience
+<H2 mb="0">Professional Experience</H2>
+<Hr border="2" color="primary" />
 
-Mindset, Austin, TX<Br />
-__Marketing Consultant__, 2009 to Present<Br />
+<Div my="16">
+
+<Div mb="8">
+<H3 mb="0">Mindset, Austin, TX</H3>
+<Strong>Marketing Consultant</Strong>, 2009 to Present<Br />
+</Div>
+
 Enhance clients’ business portfolio by providing research, analysis, and strategic planning, including SEO, SEM, PPC, social media, conversion optimization, and landing page design. Provide hands-on leadership to site owners and marketing directors for email automation necessary to hit annual sell-through targets and drive brand awareness. Build and fine-tune online conversion systems, lead generation, and ecommerce solutions. Increase lead generation by three times and optimized website traffic by redesigning and launching highly-interactive website platform.
 
 _Key Achievements:_
@@ -58,8 +64,12 @@ _Key Achievements:_
 - Achieved 227% ROI and reduced $120K yearly in vendor costs by restructuring corporate website strategy.
 - Accelerated subscribers base at a faster rate by changing calls to action to improve robust content strategy.
 
-<Block src="contentLink" text="Knowbility Inc." href="https://knowbility.org" />, Austin, TX <Br />
+</Div>
+<Div my="16">
+<Div mb="8">
+<H3 mb="0"><Block src="contentLink" text="Knowbility Inc." href="https://knowbility.org" />, Austin, TX <Br /></H3>
 <Strong>Sr. Accessibility Strategist & Chief Technology Officer</Strong>, 2015 to 2018
+</Div>
 
 Boosted revenue by 20% through designing a new consulting product and accessibility strategy whilst partnering with companies to provide accessibility qualify assurance for new development projects. Mitigated risk of law suits by thoroughly auditing ADA liability / accessibility compliance issues for over 20 products, developing course of action, and providing training to resolve issue in real time. Secured profitable business proposals by developing a framework for improved technical project estimation and effective resource planning. Maintained strategic capabilities of company by converting core product or accessibility audits into a more consistent process to generate economies of repetition, reduce errors, and eliminate contractors’ dependability. Enabled key stakeholders to make strategic and tactical-level decisions by establishing ad-hoc framework for standardized analysis and transparent reporting.
 
@@ -71,8 +81,12 @@ _Key Projects:_
 - __Pearson Corporation-Standardized Test__: Audit included Windows 10: MS Edge, Firefox, and Chrome with NVDA and Jaws, as well as MacOS: Safari & VoiceOver. Delivered user experience findings from both sighted and non-sighted users in a consolidated report covering operating systems, browsers, and applicable screen reader.
 - Other projects included ACT Corporation-Online Application Form, Tarrant County Community College District, and Whole Foods.
 
-<Block src="contentLink" text="BAE Systems (TS Clearance)" href="https://baesystems.com" />, Austin, TX<Br />
-<Strong>Senior Contract Administrator</Strong>, 2008 to 2012
+</Div>
+<Div my="16">
+<Div mb="8">
+<H3 mb="0"><Block src="contentLink" text="BAE Systems" href="https://baesystems.com" />, Austin, TX</H3>
+<Strong>Senior Contract Administrator <Br />(TS Clearance)</Strong>, 2008 to 2012
+</Div>
 
 Led efforts around overseeing multiple $100M+ contracts for software development and engineering services. Fostered and maintained profitable business relationships with key clients through effective communication and value addition, resulting in gaining stronger negotiating position and improving profit margins across business unit.
 
@@ -88,6 +102,8 @@ _Key Achievements:_
 }}>
 Additional experience as <Strong>Sr. Contract Representative</Strong>, <Strong>Contract Analyst</Strong>, and <Strong>Contract Administrator</Strong> within the areas of managing multi-million dollar contracts, advising on contractual rights and obligations, and pricing tool development.</P>
 
+</Div>
+
 <H2 mb="0">Technical Proficiencies</H2>
 <Hr border="2" color="primary" />
 
@@ -96,7 +112,7 @@ Web Development: ReactJS, GatsbyJS, HTML, PHP, CSS, JavaScript, WP Engine, Yoast
 <H2 mb="0">Education</H2>
 <Hr border="2" color="primary" />
 
-__Bachelor of Science in Finance__, San Diego State University, San Diego, CA
+__Bachelor of Science in Finance__, <Block src="contentLink" text="San Diego State University" href="https://sdsu.edu" />, San Diego, CA
 
 
 </Container>
