--- a/content/pages/resume.mdx
+++ b/content/pages/resume.mdx
@@ -26,7 +26,7 @@ Vision-driven professional, adept at managing marketing assets and campaigns to 
 
 <H3 textAlign="center">Core Competencies</H3>
 
-<Grid col="1|2" gap="0|16">
+<Grid col="1|2" gap="0|16" mb="16">
     <Div>
         <Ul my="0">
             <Li>Web Marketing Optimization Techniques</Li>
